--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>IT-networksecure - Assistance Informatique</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="main.css">
-    </head>
+</head>
 <body>
 
     <!-- En-tête -->
@@ -14,21 +14,20 @@
             <a href="index.html" class="logo">it-networksecure</a>
             <nav id="nav">
                 <a href="index.html">Accueil</a>
-                <a href="services.html">Services</a>
+                <a href="services.html">Services</a> <!-- Lien vers la page "services.html" -->
                 <a href="contact.html">Contact</a>
             </nav>
         </div>
     </header>
-    <a href="#menu" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 
     <!-- Bannière -->
     <section id="banner">
         <div class="inner">
             <h1>Assistance Informatique<br>pour les Particuliers et Entreprises</h1>
             <p>Besoin d'aide pour résoudre un problème informatique ? Nous sommes là pour vous aider !</p>
+            <!-- Bouton "Services" qui renvoie vers la page "services.html" -->
             <ul class="actions">
-                <!-- Modifiez le lien ci-dessous -->
-                <li><a href="services.html" class="button alt">Nos Services</a></li>
+                <li><a href="services.html" class="button">Services</a></li>
             </ul>
         </div>
     </section>
@@ -37,6 +36,7 @@
     <section id="services">
         <div class="inner">
             <!-- Contenu de la section Services -->
+            <!-- Ajoutez les détails de vos services ici -->
         </div>
     </section>
 
@@ -44,14 +44,9 @@
     <section id="footer">
         <div class="inner">
             <!-- Contenu du pied de page -->
+            <p>Propulsé par : Anthony Lamour</p>
         </div>
     </section>
-
-    <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/skel.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
 
 </body>
 </html>
