--- a/contact.html
+++ b/contact.html
@@ -27,23 +27,9 @@
             <header>
                 <h2>Nous Contacter</h2>
             </header>
-            <form method="post" action="#" class="contact-form">
-                <div class="field half first">
-                    <label for="name">Nom</label>
-                    <input type="text" name="name" id="name" />
-                </div>
-                <div class="field half">
-                    <label for="email">Email</label>
-                    <input type="text" name="email" id="email" />
-                </div>
-                <div class="field">
-                    <label for="message">Message</label>
-                    <textarea name="message" id="message" rows="6"></textarea>
-                </div>
-                <ul class="actions">
-                    <li><input type="submit" value="Envoyer le message" class="button special" /></li>
-                </ul>
-            </form>
+            <div class="contact-form">
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe1VRopML1Q_yOWcOKSBRWM7g474uRf03ypvlI8OeK8sQUaKA/viewform?embedded=true" width="640" height="900" frameborder="0" marginheight="0" marginwidth="0">Chargement en cours…</iframe>
+            </div>
         </div>
     </section>
 
