--- a/services.html
+++ b/services.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <title>IT-networksecure - Services</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="main1.css">
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
+
 <body>
 
     <!-- En-tête -->
@@ -18,7 +20,8 @@
                 <a href="services.html">Services</a>
                 <a href="contact.html">Contact</a>
             </nav>
-            <button id="toggle-menu" class="navPanelToggle"><span class="fa fa-bars"></span></button> <!-- Bouton de menu pour les petits écrans -->
+            <button id="toggle-menu" class="navPanelToggle"><span class="fa fa-bars"></span></button>
+            <!-- Bouton de menu pour les petits écrans -->
         </div>
     </header>
 
@@ -34,42 +37,48 @@
                     <section class="box">
                         <i class="icon big rounded fa-desktop"></i>
                         <h3>Assistance à distance</h3>
-                        <p>Bénéficiez d'une aide rapide et efficace directement depuis chez vous grâce à notre service d'assistance à distance.</p>
+                        <p>Bénéficiez d'une aide rapide et efficace directement depuis chez vous grâce à notre service
+                            d'assistance à distance.</p>
                     </section>
                 </div>
                 <div class="col-4 col-6-medium col-12-small">
                     <section class="box">
                         <i class="icon big rounded fa-laptop"></i>
                         <h3>Réparation Matérielle</h3>
-                        <p>Nos experts peuvent réparer votre matériel informatique défectueux pour vous permettre de retrouver un fonctionnement optimal.</p>
+                        <p>Nos experts peuvent réparer votre matériel informatique défectueux pour vous permettre de
+                            retrouver un fonctionnement optimal.</p>
                     </section>
                 </div>
                 <div class="col-4 col-6-medium col-12-small">
                     <section class="box">
                         <i class="icon big rounded fa-wrench"></i>
                         <h3>Optimisation Système</h3>
-                        <p>Améliorez les performances de votre système grâce à notre service d'optimisation et de nettoyage de votre ordinateur.</p>
+                        <p>Améliorez les performances de votre système grâce à notre service d'optimisation et de
+                            nettoyage de votre ordinateur.</p>
                     </section>
                 </div>
                 <div class="col-4 col-6-medium col-12-small">
                     <section class="box">
                         <i class="icon big rounded fa-shield"></i>
                         <h3>Sécurité Informatique</h3>
-                        <p>Protégez vos données et votre vie privée avec nos solutions de sécurité informatique avancées.</p>
+                        <p>Protégez vos données et votre vie privée avec nos solutions de sécurité informatique
+                            avancées.</p>
                     </section>
                 </div>
                 <div class="col-4 col-6-medium col-12-small">
                     <section class="box">
                         <i class="icon big rounded fa-cogs"></i>
                         <h3>Installation et Configuration</h3>
-                        <p>Nous assurons l'installation et la configuration de vos logiciels et périphériques pour une utilisation optimale.</p>
+                        <p>Nous assurons l'installation et la configuration de vos logiciels et périphériques pour
+                            une utilisation optimale.</p>
                     </section>
                 </div>
                 <div class="col-4 col-6-medium col-12-small">
                     <section class="box">
                         <i class="icon big rounded fa-life-ring"></i>
                         <h3>Support Technique</h3>
-                        <p>Profitez d'un support technique compétent et réactif pour résoudre vos problèmes informatiques.</p>
+                        <p>Profitez d'un support technique compétent et réactif pour résoudre vos problèmes
+                            informatiques.</p>
                     </section>
                 </div>
             </div>
@@ -91,4 +100,5 @@
     <script src="assets/js/main.js"></script>
 
 </body>
+
 </html>
