--- a/services.html
+++ b/services.html
@@ -35,7 +35,7 @@
             <div class="row">
                 <div class="col-4 col-6-medium col-12-small">
                     <section class="box">
-                        <i class="icon big rounded fa-desktop"></i>
+                        <i class="icon big rounded fas fa-desktop"></i>
                         <h3>Assistance à distance</h3>
                         <p>Bénéficiez d'une aide rapide et efficace directement depuis chez vous grâce à notre service
                             d'assistance à distance.</p>
@@ -43,7 +43,7 @@
                 </div>
                 <div class="col-4 col-6-medium col-12-small">
                     <section class="box">
-                        <i class="icon big rounded fa-laptop"></i>
+                        <i class="icon big rounded fas fa-laptop"></i>
                         <h3>Réparation Matérielle</h3>
                         <p>Nos experts peuvent réparer votre matériel informatique défectueux pour vous permettre de
                             retrouver un fonctionnement optimal.</p>
@@ -51,7 +51,7 @@
                 </div>
                 <div class="col-4 col-6-medium col-12-small">
                     <section class="box">
-                        <i class="icon big rounded fa-wrench"></i>
+                        <i class="icon big rounded fas fa-wrench"></i>
                         <h3>Optimisation Système</h3>
                         <p>Améliorez les performances de votre système grâce à notre service d'optimisation et de
                             nettoyage de votre ordinateur.</p>
@@ -59,7 +59,7 @@
                 </div>
                 <div class="col-4 col-6-medium col-12-small">
                     <section class="box">
-                        <i class="icon big rounded fa-shield"></i>
+                        <i class="icon big rounded fas fa-shield"></i>
                         <h3>Sécurité Informatique</h3>
                         <p>Protégez vos données et votre vie privée avec nos solutions de sécurité informatique
                             avancées.</p>
@@ -67,7 +67,7 @@
                 </div>
                 <div class="col-4 col-6-medium col-12-small">
                     <section class="box">
-                        <i class="icon big rounded fa-cogs"></i>
+                        <i class="icon big rounded fas fa-cogs"></i>
                         <h3>Installation et Configuration</h3>
                         <p>Nous assurons l'installation et la configuration de vos logiciels et périphériques pour
                             une utilisation optimale.</p>
@@ -75,7 +75,7 @@
                 </div>
                 <div class="col-4 col-6-medium col-12-small">
                     <section class="box">
-                        <i class="icon big rounded fa-life-ring"></i>
+                        <i class="icon big rounded fas fa-life-ring"></i>
                         <h3>Support Technique</h3>
                         <p>Profitez d'un support technique compétent et réactif pour résoudre vos problèmes
                             informatiques.</p>
@@ -93,12 +93,12 @@
         <!-- ... Votre contenu actuel ... -->
     </section>
 
-    <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/skel.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
-
 </body>
+
+<script>
+    document.getElementById('toggle-menu').addEventListener('click', function() {
+        document.getElementById('nav').classList.toggle('show');
+    });
+</script>
 
 </html>
