--- a/services.html
+++ b/services.html
@@ -34,7 +34,14 @@
             </header>
             <p>Nous proposons une gamme complète de services d'assistance informatique pour répondre à vos besoins spécifiques :</p>
             <div class="row">
-                <!-- ... Les dalles de services avec les icônes ... -->
+                <div class="col-4 col-6-medium col-12-small">
+                    <section class="box">
+                        <i class="icon big rounded fas fa-desktop"></i>
+                        <h3>Assistance à distance</h3>
+                        <p>Bénéficiez d'une aide rapide et efficace directement depuis chez vous grâce à notre service d'assistance à distance.</p>
+                    </section>
+                </div>
+                <!-- Ajoutez ici les autres dalles de services avec les icônes -->
             </div>
             <div class="actions">
                 <a href="contact.html" class="button alt">Nous Contacter</a>
