--- a/services.html
+++ b/services.html
@@ -41,41 +41,7 @@
                         <p>Bénéficiez d'une aide rapide et efficace directement depuis chez vous grâce à notre service d'assistance à distance.</p>
                     </section>
                 </div>
-                <div class="col-4 col-6-medium col-12-small">
-                    <section class="box">
-                        <i class="icon big rounded fas fa-laptop"></i>
-                        <h3>Réparation Matérielle</h3>
-                        <p>Nos experts peuvent réparer votre matériel informatique défectueux pour vous permettre de retrouver un fonctionnement optimal.</p>
-                    </section>
-                </div>
-                <div class="col-4 col-6-medium col-12-small">
-                    <section class="box">
-                        <i class="icon big rounded fas fa-wrench"></i>
-                        <h3>Optimisation Système</h3>
-                        <p>Améliorez les performances de votre système grâce à notre service d'optimisation et de nettoyage de votre ordinateur.</p>
-                    </section>
-                </div>
-                <div class="col-4 col-6-medium col-12-small">
-                    <section class="box">
-                        <i class="icon big rounded fas fa-shield"></i>
-                        <h3>Sécurité Informatique</h3>
-                        <p>Protégez vos données et votre vie privée avec nos solutions de sécurité informatique avancées.</p>
-                    </section>
-                </div>
-                <div class="col-4 col-6-medium col-12-small">
-                    <section class="box">
-                        <i class="icon big rounded fas fa-cogs"></i>
-                        <h3>Installation et Configuration</h3>
-                        <p>Nous assurons l'installation et la configuration de vos logiciels et périphériques pour une utilisation optimale.</p>
-                    </section>
-                </div>
-                <div class="col-4 col-6-medium col-12-small">
-                    <section class="box">
-                        <i class="icon big rounded fas fa-life-ring"></i>
-                        <h3>Support Technique</h3>
-                        <p>Profitez d'un support technique compétent et réactif pour résoudre vos problèmes informatiques.</p>
-                    </section>
-                </div>
+                <!-- Ajoutez ici les autres dalles de services avec les icônes -->
             </div>
             <div class="actions">
                 <a href="contact.html" class="button alt">Nous Contacter</a>
@@ -94,6 +60,7 @@
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
 
+    <!-- Script mis à jour pour le menu déroulant -->
     <script>
         document.getElementById('toggle-menu').addEventListener('click', function() {
             document.getElementById('nav').classList.toggle('show');
