--- a/services.html
+++ b/services.html
@@ -15,12 +15,13 @@
     <header id="header">
         <div class="inner">
             <a href="index.html" class="logo">it-networksecure</a>
-            <nav id="nav" class="no-marker">
+            <nav id="nav">
                 <a href="index.html">Accueil</a>
                 <a href="services.html">Services</a>
                 <a href="contact.html">Contact</a>
             </nav>
-            <span id="toggle-menu" class="fa fa-bars"></span> <!-- Icône de menu pour les petits écrans -->
+            <button id="toggle-menu" class="navPanelToggle"><span class="fa fa-bars"></span></button>
+            <!-- Bouton de menu pour les petits écrans -->
         </div>
     </header>
 
@@ -30,7 +31,51 @@
             <header>
                 <h2>Nos Services</h2>
             </header>
-            <!-- ... (votre contenu actuel) ... -->
+            <p>Nous proposons une gamme complète de services d'assistance informatique pour répondre à vos besoins spécifiques :</p>
+            <div class="row">
+                <div class="col-4 col-6-medium col-12-small">
+                    <section class="box">
+                        <i class="icon big rounded fas fa-desktop"></i>
+                        <h3>Assistance à distance</h3>
+                        <p>Bénéficiez d'une aide rapide et efficace directement depuis chez vous grâce à notre service d'assistance à distance.</p>
+                    </section>
+                </div>
+                <div class="col-4 col-6-medium col-12-small">
+                    <section class="box">
+                        <i class="icon big rounded fas fa-laptop"></i>
+                        <h3>Réparation Matérielle</h3>
+                        <p>Nos experts peuvent réparer votre matériel informatique défectueux pour vous permettre de retrouver un fonctionnement optimal.</p>
+                    </section>
+                </div>
+                <div class="col-4 col-6-medium col-12-small">
+                    <section class="box">
+                        <i class="icon big rounded fas fa-wrench"></i>
+                        <h3>Optimisation Système</h3>
+                        <p>Améliorez les performances de votre système grâce à notre service d'optimisation et de nettoyage de votre ordinateur.</p>
+                    </section>
+                </div>
+                <div class="col-4 col-6-medium col-12-small">
+                    <section class="box">
+                        <i class="icon big rounded fas fa-shield"></i>
+                        <h3>Sécurité Informatique</h3>
+                        <p>Protégez vos données et votre vie privée avec nos solutions de sécurité informatique avancées.</p>
+                    </section>
+                </div>
+                <div class="col-4 col-6-medium col-12-small">
+                    <section class="box">
+                        <i class="icon big rounded fas fa-cogs"></i>
+                        <h3>Installation et Configuration</h3>
+                        <p>Nous assurons l'installation et la configuration de vos logiciels et périphériques pour une utilisation optimale.</p>
+                    </section>
+                </div>
+                <div class="col-4 col-6-medium col-12-small">
+                    <section class="box">
+                        <i class="icon big rounded fas fa-life-ring"></i>
+                        <h3>Support Technique</h3>
+                        <p>Profitez d'un support technique compétent et réactif pour résoudre vos problèmes informatiques.</p>
+                    </section>
+                </div>
+            </div>
             <ul class="actions">
                 <li><a href="contact.html" class="button alt">Nous Contacter</a></li>
             </ul>
@@ -42,18 +87,12 @@
         <!-- ... Votre contenu actuel ... -->
     </section>
 
-    <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/skel.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
-
-    <script>
-        document.getElementById('toggle-menu').addEventListener('click', function() {
-            document.getElementById('nav').classList.toggle('show');
-        });
-    </script>
-
 </body>
+
+<script>
+    document.getElementById('toggle-menu').addEventListener('click', function() {
+        document.getElementById('nav').classList.toggle('show');
+    });
+</script>
 
 </html>
