--- a/services.html
+++ b/services.html
@@ -14,14 +14,14 @@
     <!-- En-tête -->
     <header id="header">
         <div class="inner">
-            <a href="index.html" class="logo">it-networksecure</a>
-            <button id="toggle-menu" class="navPanelToggle"><span class="fa fa-bars"></span></button>
-            <!-- Bouton de menu pour les petits écrans -->
+            <div class="logo">it-networksecure</div>
             <nav id="nav">
                 <a href="index.html">Accueil</a>
                 <a href="services.html">Services</a>
                 <a href="contact.html">Contact</a>
             </nav>
+            <button id="toggle-menu" class="navPanelToggle"><span class="fa fa-bars"></span></button>
+            <!-- Bouton de menu pour les petits écrans -->
         </div>
     </header>
 
@@ -82,9 +82,6 @@
                     </section>
                 </div>
             </div>
-            <ul class="actions">
-                <li><a href="contact.html" class="button alt">Nous Contacter</a></li>
-            </ul>
         </div>
     </section>
 
@@ -93,12 +90,12 @@
         <!-- ... Votre contenu actuel ... -->
     </section>
 
-</body>
+    <script>
+        document.getElementById('toggle-menu').addEventListener('click', function () {
+            document.getElementById('nav').classList.toggle('show');
+        });
+    </script>
 
-<script>
-    document.getElementById('toggle-menu').addEventListener('click', function() {
-        document.getElementById('nav').classList.toggle('show');
-    });
-</script>
+</body>
 
 </html>
