--- a/services.html
+++ b/services.html
@@ -14,14 +14,15 @@
     <!-- En-tête -->
     <header id="header">
         <div class="inner">
-            <div class="logo">it-networksecure</div>
+            <a href="index.html" class="logo">it-networksecure</a>
+            <button id="toggle-menu" class="navPanelToggle"><span class="fa fa-bars"></span></button>
+            <!-- Bouton de menu pour les petits écrans -->
             <nav id="nav">
                 <a href="index.html">Accueil</a>
                 <a href="services.html">Services</a>
                 <a href="contact.html">Contact</a>
+                <!-- Le bouton "Nous Contacter" est ajouté ici dans le menu déroulant -->
             </nav>
-            <button id="toggle-menu" class="navPanelToggle"><span class="fa fa-bars"></span></button>
-            <!-- Bouton de menu pour les petits écrans -->
         </div>
     </header>
 
@@ -82,6 +83,9 @@
                     </section>
                 </div>
             </div>
+            <ul class="actions">
+                <li><a href="contact.html" class="button alt">Nous Contacter</a></li>
+            </ul>
         </div>
     </section>
 
@@ -91,7 +95,7 @@
     </section>
 
     <script>
-        document.getElementById('toggle-menu').addEventListener('click', function () {
+        document.getElementById('toggle-menu').addEventListener('click', function() {
             document.getElementById('nav').classList.toggle('show');
         });
     </script>
