--- a/services.html
+++ b/services.html
@@ -84,7 +84,7 @@
                 </div>
             </div>
             <ul class="actions">
-                <li><a class="button alt" href="contact.html">Nous Contacter</a></li>
+                <li><a href="contact.html" class="button alt">Nous Contacter</a></li>
             </ul>
         </div>
     </section>
