--- a/services.html
+++ b/services.html
@@ -83,9 +83,13 @@
                     </section>
                 </div>
             </div>
-            <ul class="actions">
-                <li><a href="contact.html" class="button alt">Nous Contacter</a></li>
-            </ul>
+        </div>
+    </section>
+
+    <!-- Bouton "Nous Contacter" -->
+    <section class="actions">
+        <div class="inner">
+            <a href="contact.html" class="button alt">Nous Contacter</a>
         </div>
     </section>
 
