--- a/services.html
+++ b/services.html
@@ -17,7 +17,7 @@
             <a href="index.html" class="logo">it-networksecure</a>
             <button id="toggle-menu" class="navPanelToggle"><span class="fa fa-bars"></span></button>
             <!-- Bouton de menu pour les petits écrans -->
-            <nav id="nav">
+            <nav id="nav" class="no-marker">
                 <a href="index.html">Accueil</a>
                 <a href="services.html">Services</a>
                 <a href="contact.html">Contact</a>
@@ -83,13 +83,9 @@
                     </section>
                 </div>
             </div>
-        </div>
-    </section>
-
-    <!-- Bouton "Nous Contacter" -->
-    <section class="actions">
-        <div class="inner">
-            <a href="contact.html" class="button alt">Nous Contacter</a>
+            <ul class="actions">
+                <li><a href="contact.html" class="button alt">Nous Contacter</a></li>
+            </ul>
         </div>
     </section>
 
