--- a/services.html
+++ b/services.html
@@ -17,7 +17,7 @@
             <a href="index.html" class="logo">it-networksecure</a>
             <button id="toggle-menu" class="navPanelToggle"><span class="fa fa-bars"></span></button>
             <!-- Bouton de menu pour les petits écrans -->
-            <nav id="nav" class="no-marker">
+            <nav id="nav">
                 <a href="index.html">Accueil</a>
                 <a href="services.html">Services</a>
                 <a href="contact.html">Contact</a>
@@ -83,15 +83,17 @@
                     </section>
                 </div>
             </div>
-            <ul class="actions">
-                <li><a href="contact.html" class="button alt">Nous Contacter</a></li>
-            </ul>
         </div>
     </section>
 
     <!-- Pied de page -->
     <section id="footer">
         <!-- ... Votre contenu actuel ... -->
+
+        <!-- Bouton "Nous Contacter" en bas de page -->
+        <div class="actions">
+            <a href="contact.html" class="button alt">Nous Contacter</a>
+        </div>
     </section>
 
     <script>
