--- a/services.html
+++ b/services.html
@@ -18,12 +18,7 @@
             <!-- Bouton de menu pour les petits écrans -->
             <button id="toggle-menu" class="navPanelToggle"><span class="fa fa-bars"></span></button>
             <nav id="nav">
-                <div class="menu-toggle" id="menu-toggle">
-                    <span class="menu-icon"></span>
-                    <span class="menu-icon"></span>
-                    <span class="menu-icon"></span>
-                </div>
-                <ul id="menu-links">
+                <ul class="menu-links">
                     <li><a href="index.html">Accueil</a></li>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="contact.html">Contact</a></li>
@@ -96,7 +91,6 @@
 
     <script>
         document.getElementById('toggle-menu').addEventListener('click', function() {
-            document.getElementById('menu-toggle').classList.toggle('open');
             document.getElementById('menu-links').classList.toggle('show');
         });
     </script>
