--- a/services.html
+++ b/services.html
@@ -17,14 +17,15 @@
             <a href="index.html" class="logo">it-networksecure</a>
             <!-- Bouton de menu pour les petits écrans -->
             <button id="toggle-menu" class="navPanelToggle"><span class="fa fa-bars"></span></button>
-            <nav id="nav">
-                <ul class="menu-links">
-                    <li><a href="index.html">Accueil</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
         </div>
+        <!-- Navigation -->
+        <nav id="nav">
+            <ul>
+                <li><a href="index.html">Accueil</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
     <!-- Contenu spécifique de la page "Services" -->
@@ -91,7 +92,7 @@
 
     <script>
         document.getElementById('toggle-menu').addEventListener('click', function() {
-            document.getElementById('menu-links').classList.toggle('show');
+            document.getElementById('nav').classList.toggle('show');
         });
     </script>
 
