--- a/services.html
+++ b/services.html
@@ -17,15 +17,14 @@
             <a href="index.html" class="logo">it-networksecure</a>
             <!-- Bouton de menu pour les petits écrans -->
             <button id="toggle-menu" class="navPanelToggle"><span class="fa fa-bars"></span></button>
+            <nav id="nav" class="navPanel">
+                <ul>
+                    <li><a href="index.html">Accueil</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
         </div>
-        <!-- Navigation -->
-        <nav id="nav">
-            <ul>
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
     </header>
 
     <!-- Contenu spécifique de la page "Services" -->
@@ -36,42 +35,42 @@
             </header>
             <p>Nous proposons une gamme complète de services d'assistance informatique pour répondre à vos besoins spécifiques :</p>
             <div class="row">
-                <div class="col-4 col-6-medium col-12-small">
+                <div class="col-4">
                     <section class="box">
                         <i class="icon big rounded fas fa-desktop"></i>
                         <h3>Assistance à distance</h3>
                         <p>Bénéficiez d'une aide rapide et efficace directement depuis chez vous grâce à notre service d'assistance à distance.</p>
                     </section>
                 </div>
-                <div class="col-4 col-6-medium col-12-small">
+                <div class="col-4">
                     <section class="box">
                         <i class="icon big rounded fas fa-laptop"></i>
                         <h3>Réparation Matérielle</h3>
                         <p>Nos experts peuvent réparer votre matériel informatique défectueux pour vous permettre de retrouver un fonctionnement optimal.</p>
                     </section>
                 </div>
-                <div class="col-4 col-6-medium col-12-small">
+                <div class="col-4">
                     <section class="box">
                         <i class="icon big rounded fas fa-wrench"></i>
                         <h3>Optimisation Système</h3>
                         <p>Améliorez les performances de votre système grâce à notre service d'optimisation et de nettoyage de votre ordinateur.</p>
                     </section>
                 </div>
-                <div class="col-4 col-6-medium col-12-small">
+                <div class="col-4">
                     <section class="box">
                         <i class="icon big rounded fas fa-shield"></i>
                         <h3>Sécurité Informatique</h3>
                         <p>Protégez vos données et votre vie privée avec nos solutions de sécurité informatique avancées.</p>
                     </section>
                 </div>
-                <div class="col-4 col-6-medium col-12-small">
+                <div class="col-4">
                     <section class="box">
                         <i class="icon big rounded fas fa-cogs"></i>
                         <h3>Installation et Configuration</h3>
                         <p>Nous assurons l'installation et la configuration de vos logiciels et périphériques pour une utilisation optimale.</p>
                     </section>
                 </div>
-                <div class="col-4 col-6-medium col-12-small">
+                <div class="col-4">
                     <section class="box">
                         <i class="icon big rounded fas fa-life-ring"></i>
                         <h3>Support Technique</h3>
@@ -84,9 +83,11 @@
 
     <!-- Pied de page -->
     <section id="footer">
-        <!-- ... Votre contenu actuel ... -->
-        <div class="actions">
-            <a href="contact.html" class="button alt">Nous Contacter</a>
+        <div class="inner">
+            <!-- Votre contenu actuel du pied de page -->
+            <div class="actions">
+                <a href="contact.html" class="button alt">Nous Contacter</a>
+            </div>
         </div>
     </section>
 
