--- a/services.html
+++ b/services.html
@@ -18,7 +18,7 @@
             <!-- Bouton de menu pour les petits écrans -->
             <button id="toggle-menu" class="navPanelToggle"><span class="fa fa-bars"></span></button>
             <nav id="nav">
-                <ul>
+                <ul class="menu-links">
                     <li><a href="index.html">Accueil</a></li>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="contact.html">Contact</a></li>
@@ -91,7 +91,7 @@
 
     <script>
         document.getElementById('toggle-menu').addEventListener('click', function() {
-            document.getElementById('nav').classList.toggle('show');
+            document.getElementById('menu-links').classList.toggle('show');
         });
     </script>
 
