--- a/services.html
+++ b/services.html
@@ -7,6 +7,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="main1.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <style>
+        /* Styles pour le menu déroulant */
+        nav ul li {
+            position: relative;
+        }
+
+        nav ul li ul {
+            display: none;
+            position: absolute;
+            top: 100%;
+            left: 0;
+            background-color: #f9f9f9;
+            padding: 10px;
+        }
+
+        nav ul li:hover ul {
+            display: block;
+        }
+    </style>
 </head>
 
 <body>
@@ -20,7 +39,17 @@
             <nav id="nav">
                 <ul class="menu-links">
                     <li><a href="index.html">Accueil</a></li>
-                    <li><a href="services.html">Services</a></li>
+                    <li><a href="services.html">Services</a>
+                        <!-- Menu déroulant pour les services -->
+                        <ul>
+                            <li><a href="#assistance-distance">Assistance à distance</a></li>
+                            <li><a href="#reparation-materielle">Réparation Matérielle</a></li>
+                            <li><a href="#optimisation-systeme">Optimisation Système</a></li>
+                            <li><a href="#securite-informatique">Sécurité Informatique</a></li>
+                            <li><a href="#installation-configuration">Installation et Configuration</a></li>
+                            <li><a href="#support-technique">Support Technique</a></li>
+                        </ul>
+                    </li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
