--- a/services.html
+++ b/services.html
@@ -31,9 +31,18 @@
 <body>
 
     <!-- En-tête -->
-    <header id="header">
+  <header id="header">
         <div class="inner">
             <a href="index.html" class="logo">it-networksecure</a>
+            <button id="toggle-menu">Menu</button>
+            <nav id="nav">
+                <a href="index.html">Accueil</a>
+                <a href="services.html">Services</a> <!-- Lien vers la page "services.html" -->
+                <a href="contact.html">Contact</a>
+            </nav>
+        </div>
+    </header>
+    
             <!-- Bouton de menu pour les petits écrans -->
             <button id="toggle-menu" class="navPanelToggle"><span class="fa fa-bars"></span></button>
             <nav id="nav">
