--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>IT-networksecure - Services</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="main1.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
@@ -91,8 +91,7 @@
 
     <script>
         document.getElementById('toggle-menu').addEventListener('click', function() {
-            document.getElementById('nav').classList.toggle('show');
-            this.classList.toggle('open');
+            document.getElementById('menu-links').classList.toggle('show');
         });
     </script>
 
