--- a/services.html
+++ b/services.html
@@ -89,10 +89,12 @@
         </div>
     </section>
 
-    <script>
-        document.getElementById('toggle-menu').addEventListener('click', function() {
-            document.getElementById('menu-links').classList.toggle('show');
-        });
-    </script>
+   <script>
+    document.getElementById('toggle-menu').addEventListener('click', function() {
+        console.log("Le bouton de menu a été cliqué !"); // Vérifiez que cela s'affiche dans la console lors du clic.
+        document.getElementById('menu-links').classList.toggle('show');
+    });
+</script>
+
 </body>
 </html>
