--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@
 
 <body>
 
-    <!-- En-tête -->
-    <header id="header">
-        <div class="inner">
-            <a href="index.html" class="logo">it-networksecure</a>
-            <button id="toggle-menu">Menu</button>
-            <nav id="nav">
-                <a href="index.html">Accueil</a>
-                <a href="services.html">Services</a> <!-- Lien vers la page "services.html" -->
-                <a href="contact.html">Contact</a>
-            </nav>
-        </div>
-    </header>
+   <!-- En-tête -->
+<header id="header">
+    <div class="inner">
+        <a href="index.html" class="logo">it-networksecure</a>
+        <button id="toggle-menu">Menu</button>
+        <nav id="nav">
+            <a href="index.html">Accueil</a>
+            <a href="services.html">Services</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </div>
+</header>
+
 
     <!-- Bannière -->
     <section id="banner">
