--- a/services.html
+++ b/services.html
@@ -12,17 +12,14 @@
 <body>
 
     <!-- En-tête -->
-    <header id="header">
+      <header id="header">
         <div class="inner">
             <a href="index.html" class="logo">it-networksecure</a>
-            <!-- Bouton de menu pour les petits écrans -->
-            <button id="toggle-menu" class="navPanelToggle"><span class="fa fa-bars"></span></button>
+            <button id="toggle-menu">Menu</button>
             <nav id="nav">
-                <ul class="menu-links">
-                    <li><a href="index.html">Accueil</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
+                <a href="index.html">Accueil</a>
+                <a href="services.html">Services</a> <!-- Lien vers la page "services.html" -->
+                <a href="contact.html">Contact</a>
             </nav>
         </div>
     </header>
