--- a/services.html
+++ b/services.html
@@ -12,10 +12,10 @@
 <body>
 
     <!-- En-tête -->
-      <header id="header">
+    <header id="header">
         <div class="inner">
             <a href="index.html" class="logo">it-networksecure</a>
-            <button id="toggle-menu">Menu</button>
+            <button id="toggle-menu"><i class="fas fa-bars"></i></button> <!-- Icône hamburger -->
             <nav id="nav">
                 <a href="index.html">Accueil</a>
                 <a href="services.html">Services</a> <!-- Lien vers la page "services.html" -->
